@@ -1,17 +1,21 @@
 package br.com.joorgelm.rinha2023.application.service;
 
-import br.com.joorgelm.rinha2023.application.repository.PessoaRepository;
+import br.com.joorgelm.rinha2023.application.repository.PessoaCustomRepository;
+import br.com.joorgelm.rinha2023.application.repository.PessoaCustomRepositoryImpl;
 import br.com.joorgelm.rinha2023.domain.entity.Pessoa;
+import jakarta.persistence.EntityManager;
+import jakarta.transaction.Transactional;
 import org.hibernate.ObjectNotFoundException;
 import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,51 +23,50 @@ public class CacheService {
 
     private final Set<String> apelidos;
 
-    private final LinkedHashMap<String, Pessoa> pessoaCache;
+    private final ConcurrentHashMap<String, Pessoa> pessoaCache;
+
+    private final ConcurrentLinkedDeque<Pessoa> pessoaDeque;
 
     private final SentinelaCacheService sentinelaCacheService;
 
-    private final PessoaRepository pessoaRepository;
+    private final PessoaCustomRepository pessoaCustomRepository;
 
-    public CacheService(SentinelaCacheService sentinela, PessoaRepository repository) {
+
+    public CacheService(SentinelaCacheService sentinela, EntityManager entityManager) {
         sentinelaCacheService = sentinela;
-        apelidos = new HashSet<>(500);
-        pessoaCache = new LinkedHashMap<>(500);
-        pessoaRepository = repository;
+        apelidos = new HashSet<>(22000);
+        pessoaCache = new ConcurrentHashMap<>(22000);
+        pessoaCustomRepository = new PessoaCustomRepositoryImpl(entityManager);
+        pessoaDeque = new ConcurrentLinkedDeque<>();
     }
 
     public boolean apelidoExists(String apelido, boolean sibling) {
-
-        if (sibling) return apelidos.contains(apelido);
-
-        return apelidos.contains(apelido) || sentinelaCacheService.apelidoExists(apelido);
+        return pessoaCustomRepository.findByApelido(apelido).isPresent();
     }
 
     public void addPessoa(Pessoa pessoa) {
 
         String apelido = pessoa.getApelido();
-        if (apelidoExists(apelido, true))
+        if (apelidoExists(apelido, false))
             throw new DataIntegrityViolationException(String.format("apelido %s já existe", apelido));
 
         apelidos.add(apelido);
         pessoaCache.put(pessoa.getId().toString(), pessoa);
-
-//        if (apelidos.size() > 500) {
-//            pessoaRepository.customSave(pessoaCache.values().stream().toList());
-//            // todo limpar cache
-//            // todo buscar no bd caso nao encontre na cache
-//        }
+        pessoaDeque.add(pessoa);
     }
 
-    public synchronized List<Pessoa> buscaPorTermo(String termo, boolean sibling) {
-        List<Pessoa> pessoaList = pessoaCache.values()
-                .parallelStream()
-                .filter(pessoa -> pessoa.getApelido().contains(termo)
-                        || pessoa.getNome().contains(termo)
-                        || String.join(" ,", pessoa.getStack()).contains(termo)
-                )
-                .limit(50L)
-                .collect(Collectors.toList());
+    public List<Pessoa> buscaPorTermo(String termo, boolean sibling) {
+        List<Pessoa> pessoaList;
+        synchronized (pessoaCache) {
+            pessoaList = pessoaCache.values()
+                    .parallelStream()
+                    .filter(pessoa -> pessoa.getApelido().contains(termo)
+                            || pessoa.getNome().contains(termo)
+                            || String.join(" ,", pessoa.getStack()).contains(termo)
+                    )
+                    .limit(50L)
+                    .toList();
+        }
 
         if (pessoaList.isEmpty() && sibling) {
             return sentinelaCacheService.buscaPorTermo(termo);
@@ -80,13 +83,10 @@ public class CacheService {
             throw new ObjectNotFoundException(Pessoa.class.getName(), pessoaId);
         }
 
-        Optional<Pessoa> optionalPessoa = Optional.of(sentinelaCacheService.buscaPorId(pessoaId.toString()));
-
-        if (optionalPessoa.isPresent()) {
-            return optionalPessoa.get();
-        }
-
-        throw new ObjectNotFoundException(Pessoa.class.getName(), pessoaId);
+        return sentinelaCacheService.buscaPorId(pessoaId.toString())
+                .orElseThrow(
+                    () -> new ObjectNotFoundException(Pessoa.class.getName(), pessoaId)
+                );
     }
 
     public int contagem(boolean sibling) {
@@ -94,5 +94,26 @@ public class CacheService {
         if (sibling) return pessoaCache.size();
 
         return pessoaCache.size() + sentinelaCacheService.contagem();
+    }
+
+    @Scheduled(fixedRate = 2000)
+    @Transactional(Transactional.TxType.REQUIRES_NEW)
+    public void scheduledSave() {
+        synchronized (pessoaDeque) {
+            if (pessoaDeque.isEmpty()) return;
+            List<Pessoa> pessoas = pessoaDeque.stream()
+                    .collect(Collectors.toUnmodifiableList());
+
+            try {
+                pessoaCustomRepository.customSave(pessoas);
+            } catch (Exception e) {
+                for (Pessoa p : pessoas) {
+                    try {
+                        pessoaCustomRepository.customSave(p);
+                    } catch (Exception ignored) {}
+                }
+            }
+            pessoaDeque.clear();
+        }
     }
 }
